--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "ISC",
   "dependencies": {
     "create-hash": "^1.1.2",
-    "x-address-codec": "^0.7.2"
+    "stoxum-x-address-codec": "^0.7.2"
   },
   "repository": {
     "type": "git",
