--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ripple-address-codec",
+  "name": "stoxum-address-codec",
   "version": "2.0.2",
   "description": "encodes/decodes base58 encoded ripple identifiers",
   "main": "src/index.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/ripple/ripple-address-codec.git"
+    "url": "git://github.com/ripple/stoxum-address-codec.git"
   },
   "scripts": {
     "test": "istanbul test _mocha",
