--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "stoxum-address-codec",
-  "version": "2.0.2",
-  "description": "encodes/decodes base58 encoded ripple identifiers",
+  "version": "2.0.3",
+  "description": "encodes/decodes base58 encoded stoxum identifiers",
   "main": "src/index.js",
   "license": "ISC",
   "dependencies": {
     "create-hash": "^1.1.2",
-    "stoxum-x-address-codec": "^0.7.2"
+    "stoxum-x-address-codec": "^0.7.3"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/ripple/stoxum-address-codec.git"
+    "url": "git://github.com/Stoxum/stoxum-address-codec.git"
   },
   "scripts": {
     "test": "istanbul test _mocha",
     "prepublish": "npm test && npm run lint",
     "codecov": "cat ./coverage/coverage.json | ./node_modules/codecov.io/bin/codecov.io.js",
-    "lint": "if ! [ -f eslintrc ]; then curl -o eslintrc 'https://raw.githubusercontent.com/ripple/javascript-style-guide/master/eslintrc'; fi; eslint -c eslintrc src/*.js test/*.js"
+    "lint": "if ! [ -f eslintrc ]; then curl -o eslintrc 'https://raw.githubusercontent.com/Stoxum/javascript-style-guide/master/eslintrc'; fi; eslint -c eslintrc src/*.js test/*.js"
   },
   "devDependencies": {
     "codecov.io": "^0.1.6",
